@@ -1,3 +1,8 @@
+2002-05-02  Benjamin Kahn  <xkahn@ximian.com>
+
+	* bootstrap.py (bootstraps): Add audiofile to the bootstrap
+	list.  Not everyone has it, and it isn't in GNOME CVS.
+
 2002-04-30  Malcolm Tredinnick <malcolm@commsecure.com.au>
 
 	* bootstrap.py: When there is an error downloading one of the
